[package]
name = "from-200-to-render"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.10"
trust-dns-resolver = { version = "0.23", features = ["tokio-runtime"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
